--- a/page3.html
+++ b/page3.html
@@ -49,8 +49,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="#top">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Geschiedenis">Geschiedenis</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Verwerkingaanboord">Verwerking aan boord</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Vismethodes">Vismethodes</a>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">Geschiedenis</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html">Verwerking aan boord</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Vismethodes</a>
                     </li></ul>
                 
                 
@@ -70,7 +70,7 @@
             <div class="col-md-12 col-lg-9">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Verwerking aan boord</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-4">Hier vind je alle informatie over hoe onze vis word verwerkt aan boord.</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-black display-4" href="https://mobiri.se">Home</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-black display-4" href="index.html">Home</a></div>
             </div>
         </div>
     </div>
