--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <h4 class="card-title mbr-fonts-style align-center mb-4 display-1"><strong>UK 158</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-7">De officiële website van de UK 158</p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-7">De officiële website van de UK 158 en ...</p>
                         
                     </div>
                 </div>
